@@ -1,13 +1,13 @@
 DEFINED_PHASES=compile configure install postinst prepare test
-DEPEND=dev-qt/qtgui:4 dev-qt/qtsvg:4 bittorrent? ( >=net-libs/rb_libtorrent-0.14.5 >=dev-cpp/asio-1.1.0 dev-qt/qtwebkit:4 ) curl? ( >=net-misc/curl-7.18.2 ) doc? ( dev-qt/qthelp:4 ) jabber? ( net-libs/gloox ) webinterface? ( dev-qt/qtscript:4 ) nls? ( sys-devel/gettext ) sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
+DEPEND=dev-qt/qtdbus:4 dev-qt/qtgui:4 dev-qt/qtsvg:4 bittorrent? ( >=net-libs/rb_libtorrent-0.14.5 >=dev-cpp/asio-1.1.0 dev-qt/qtwebkit:4 ) curl? ( >=net-misc/curl-7.18.2 ) doc? ( dev-qt/qthelp:4 ) jabber? ( net-libs/gloox ) webinterface? ( dev-qt/qtscript:4 ) nls? ( sys-devel/gettext ) sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
 DESCRIPTION=Qt4-based download/upload manager
 EAPI=5
 HOMEPAGE=http://fatrat.dolezel.info/
 IUSE=bittorrent +curl doc jabber nls webinterface
 KEYWORDS=~amd64 ~x86
 LICENSE=GPL-2
-RDEPEND=dev-qt/qtgui:4 dev-qt/qtsvg:4 bittorrent? ( >=net-libs/rb_libtorrent-0.14.5 >=dev-cpp/asio-1.1.0 dev-qt/qtwebkit:4 ) curl? ( >=net-misc/curl-7.18.2 ) doc? ( dev-qt/qthelp:4 ) jabber? ( net-libs/gloox ) webinterface? ( dev-qt/qtscript:4 )
+RDEPEND=dev-qt/qtdbus:4 dev-qt/qtgui:4 dev-qt/qtsvg:4 bittorrent? ( >=net-libs/rb_libtorrent-0.14.5 >=dev-cpp/asio-1.1.0 dev-qt/qtwebkit:4 ) curl? ( >=net-misc/curl-7.18.2 ) doc? ( dev-qt/qthelp:4 ) jabber? ( net-libs/gloox ) webinterface? ( dev-qt/qtscript:4 )
 SLOT=0
 SRC_URI=http://www.dolezel.info/download/data/fatrat/fatrat-1.2.0_beta2.tar.xz
 _eclasses_=cmake-utils	e2cc76ea65ae78da8e4696dad93f5d29	eutils	6faef4c127028ccbba3a11400d24ae34	flag-o-matic	eda1c0b5ba85b3eeb555a071d69eb819	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=a13dfbe75a8780eb68662882819f5a73
+_md5_=a46bd9bcf6b39b6c764e767664caf39d
